--- a/client/wfnews-war/src/main/angular/angular.json
+++ b/client/wfnews-war/src/main/angular/angular.json
@@ -2,7 +2,9 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "cli": {
     "analytics": false,
-    "defaultCollection": "@angular-eslint/schematics"
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   },
   "version": 1,
   "newProjectRoot": "projects",
@@ -163,7 +165,6 @@
       }
     }
   },
-  "defaultProject": "WFNEWS",
   "schematics": {
     "@schematics/angular:component": {
       "prefix": "app",
