--- a/client/wfnews-war/src/main/angular/tsconfig.json
+++ b/client/wfnews-war/src/main/angular/tsconfig.json
@@ -9,7 +9,7 @@
     "declaration": false,
     "moduleResolution": "node",
     "experimentalDecorators": true,
-    "target": "ES2016",
+    "target": "es2020",
     "typeRoots": [
       "node_modules/@types"
     ],
