--- a/client/wfnews-war/src/main/angular/angular.json
+++ b/client/wfnews-war/src/main/angular/angular.json
@@ -42,6 +42,11 @@
                 "glob": "splash-screen/**/*",
                 "input": "node_modules/@wf1/wfcc-application-ui",
                 "output": "assets"
+              },
+              {
+                "glob": "bc-sans/**/*",
+                "input": "node_modules/@wf1/wfcc-application-ui",
+                "output": "assets"
               }
             ],
             "styles": [
