add legacy-peer-deps to build with old datepicker

--- a/client/wfnews-war/pom.xml
+++ b/client/wfnews-war/pom.xml
@@ -215,7 +215,7 @@
 							<goal>npm</goal>
 						</goals>
 						<configuration>
-							<arguments>install --no-package-lock --registry=${npm.url}</arguments>
+							<arguments>install --legacy-peer-deps --no-package-lock --registry=${npm.url}</arguments>
 						</configuration>
 					</execution>
 					<execution>
