Inline workflow dispatch call

--- a/.github/workflows/deploy-dev-patch.yml
+++ b/.github/workflows/deploy-dev-patch.yml
@@ -7,8 +7,7 @@ env:
   TRIGGERS: ('client/' 'server/' '.github/workflows')
   PATCH_BRANCH: ${{ vars.PATCH_BRANCH }}
 
-on:
-  workflow_dispatch:
+on: workflow_dispatch
 
 jobs:
 
