--- a/.github/workflows/deploy-dev-patch.yml
+++ b/.github/workflows/deploy-dev-patch.yml
@@ -11,7 +11,6 @@ on: workflow_dispatch
 
 jobs:
   call-mvn-client-patch:
-    if: github.event.pull_request.merged == true
     uses: ./.github/workflows/mvn-client-patch.yml
     secrets: inherit
     with: 
@@ -19,7 +18,6 @@ jobs:
       BRANCH: ${{ vars.PATCH_BRANCH }}
 
   call-mvn-server-patch:
-    if: github.event.pull_request.merged == true
     uses: ./.github/workflows/mvn-server-patch.yml
     #SMTP_PASSWORD, DV_PASSWORD AND TFC_PROJECT ARE STORED AS SECRET
     with:
@@ -43,7 +41,7 @@ jobs:
 
   terragrunt-deploy-dev:
     uses: ./.github/workflows/terragrunt-deploy.yml
-    needs: [call-mvn-client, call-mvn-server, liquibase-build, apisix-build]
+    needs: [call-mvn-client-patch, call-mvn-server-patch, liquibase-build, apisix-build]
     with:
       REGISTRY: ghcr.io
       #Server and Image name get PR number as appropriate inside deploy step
