--- a/.github/workflows/mvn-client-patch.yml
+++ b/.github/workflows/mvn-client-patch.yml
@@ -61,7 +61,8 @@ jobs:
     
     steps:
       - uses: actions/checkout@v3
-      
+        with:
+          ref: ${{ inputs.BRANCH }}
       - name: download artifact
         uses: actions/download-artifact@v3
         with:
