--- a/.github/workflows/mvn-server-patch.yml
+++ b/.github/workflows/mvn-server-patch.yml
@@ -93,7 +93,7 @@ jobs:
         id: meta_pr
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: ${{ inputs.REGISTRY}}/${{ env.IMAGE_NAME }}
+          images: ${{ inputs.REGISTRY}}/${{ env.IMAGE_NAME }}-HOTFIX
           tags: |
             type=schedule
             type=raw,value=${{ github.base_ref }}
