--- a/.github/workflows/mvn-server-patch.yml
+++ b/.github/workflows/mvn-server-patch.yml
@@ -15,6 +15,9 @@ on:
       BRANCH:
         required: true
         type: string
+      TAG:
+        required: true
+        type: string
     secrets:
       IDIR_AS_EMAIL:
         required: true
@@ -98,7 +101,7 @@ jobs:
             type=schedule
             type=raw,value=${{ github.base_ref }}
             type=ref,event=tag
-            type=raw,value=pr-HOTFIX
+            type=raw,value=pr-HOTFIX-${{ inputs.BRANCH }}-${{ inputs.TAG }}
           
       - name: Build and push Docker image (with PR)
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
