Replace main tag with hotfix tag
#refs/tags/ from refs/head/main to hotfix for server and client images

--- a/.github/workflows/deploy-test-patch.yml
+++ b/.github/workflows/deploy-test-patch.yml
@@ -34,14 +34,14 @@ jobs:
       - name: Tag client image
         run: |
           docker pull ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.CLIENT_IMAGE_NAME }}:pr-hotfix-${{ vars.PATCH_BRANCH }}-${{ vars.HOTFIX_TAG }}
-          docker tag ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.CLIENT_IMAGE_NAME }}:pr-hotfix-${{ vars.PATCH_BRANCH }}-${{ vars.HOTFIX_TAG }} ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.CLIENT_IMAGE_NAME }}:${GITHUB_REF#refs/tags/}
-          docker push ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.CLIENT_IMAGE_NAME }}:${GITHUB_REF#refs/tags/}
+          docker tag ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.CLIENT_IMAGE_NAME }}:pr-hotfix-${{ vars.PATCH_BRANCH }}-${{ vars.HOTFIX_TAG }} ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.CLIENT_IMAGE_NAME }}:hotfix
+          docker push ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.CLIENT_IMAGE_NAME }}:hotfix
 
       - name: Tag server image
         run: |
           docker pull ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.SERVER_IMAGE_NAME }}:pr-hotfix-${{ vars.PATCH_BRANCH }}-${{ vars.HOTFIX_TAG }}
-          docker tag ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.SERVER_IMAGE_NAME }}:pr-hotfix-${{ vars.PATCH_BRANCH }}-${{ vars.HOTFIX_TAG }} ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.SERVER_IMAGE_NAME }}:${GITHUB_REF#refs/tags/}
-          docker push ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.SERVER_IMAGE_NAME }}:${GITHUB_REF#refs/tags/}
+          docker tag ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.SERVER_IMAGE_NAME }}:pr-hotfix-${{ vars.PATCH_BRANCH }}-${{ vars.HOTFIX_TAG }} ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.SERVER_IMAGE_NAME }}:hotfix
+          docker push ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.SERVER_IMAGE_NAME }}:hotfix
 
       - name: Tag liquibase image
         run: |
