--- a/.github/workflows/deploy-prod-patch.yml
+++ b/.github/workflows/deploy-prod-patch.yml
@@ -1,4 +1,4 @@
-name: Deploy Prod
+name: Deploy Prod Patch
 
 env:
   REGISTRY: ghcr.io
@@ -38,26 +38,26 @@ jobs:
       - name: Tag client image
         run: |
           docker pull ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.CLIENT_IMAGE_NAME }}:pr-hotfix-${{ vars.PATCH_BRANCH }}-${{ vars.HOTFIX_TAG }}
-          docker tag ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.CLIENT_IMAGE_NAME }}:pr-hotfix-${{ vars.PATCH_BRANCH }}-${{ vars.HOTFIX_TAG }} ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.CLIENT_IMAGE_NAME }}:hotfix
-          docker push ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.CLIENT_IMAGE_NAME }}:hotfix
+          docker tag ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.CLIENT_IMAGE_NAME }}:pr-hotfix-${{ vars.PATCH_BRANCH }}-${{ vars.HOTFIX_TAG }} ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.CLIENT_IMAGE_NAME }}:hotfix-${{ vars.PATCH_BRANCH }}-${{ vars.HOTFIX_TAG }}
+          docker push ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.CLIENT_IMAGE_NAME }}:hotfix-${{ vars.PATCH_BRANCH }}-${{ vars.HOTFIX_TAG }}
 
       - name: Tag server image
         run: |
           docker pull ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.SERVER_IMAGE_NAME }}:pr-hotfix-${{ vars.PATCH_BRANCH }}-${{ vars.HOTFIX_TAG }}
-          docker tag ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.SERVER_IMAGE_NAME }}:pr-hotfix-${{ vars.PATCH_BRANCH }}-${{ vars.HOTFIX_TAG }} ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.SERVER_IMAGE_NAME }}:hotfix
-          docker push ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.SERVER_IMAGE_NAME }}:hotfix
+          docker tag ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.SERVER_IMAGE_NAME }}:pr-hotfix-${{ vars.PATCH_BRANCH }}-${{ vars.HOTFIX_TAG }} ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.SERVER_IMAGE_NAME }}:hotfix-${{ vars.PATCH_BRANCH }}-${{ vars.HOTFIX_TAG }}
+          docker push ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.SERVER_IMAGE_NAME }}:hotfix-${{ vars.PATCH_BRANCH }}-${{ vars.HOTFIX_TAG }}
 
       - name: Tag liquibase image
         run: |
           docker pull ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.LIQUIBASE_IMAGE_NAME }}:main
-          docker tag ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.LIQUIBASE_IMAGE_NAME }}:main ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.LIQUIBASE_IMAGE_NAME }}:hotfix
-          docker push ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.LIQUIBASE_IMAGE_NAME }}:hotfix
+          docker tag ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.LIQUIBASE_IMAGE_NAME }}:main ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.LIQUIBASE_IMAGE_NAME }}:hotfix-${{ vars.PATCH_BRANCH }}-${{ vars.HOTFIX_TAG }}
+          docker push ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.LIQUIBASE_IMAGE_NAME }}:hotfix-${{ vars.PATCH_BRANCH }}-${{ vars.HOTFIX_TAG }}
 
       - name: Tag apisix image
         run: |
           docker pull ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.APISIX_IMAGE_NAME }}:main
-          docker tag ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.APISIX_IMAGE_NAME }}:main ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.APISIX_IMAGE_NAME }}:hotfix
-          docker push ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.APISIX_IMAGE_NAME }}:hotfix
+          docker tag ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.APISIX_IMAGE_NAME }}:main ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.APISIX_IMAGE_NAME }}:hotfix-${{ vars.PATCH_BRANCH }}-${{ vars.HOTFIX_TAG }}
+          docker push ${{env.REGISTRY}}/${{github.repository_owner}}/${{ env.APISIX_IMAGE_NAME }}:hotfix-${{ vars.PATCH_BRANCH }}-${{ vars.HOTFIX_TAG }}
 
       - run: echo ::set-output name=tag-value::${GITHUB_REF#refs/tags/} 
         id: get-release-tag
@@ -109,7 +109,7 @@ jobs:
       WFNEWS_AGOL_QUERY_URL: https://services6.arcgis.com/ubm4tcTYICKBpist/ArcGIS/rest/services/BCWS_ActiveFires_PublicView/FeatureServer/0/query?where=
       WFNEWS_USERNAME: wfnewsprod
       WFNEWS_MAX_CONNECTIONS: 400
-      IMAGE_TAG: ${{ needs.tag-images.outputs.tag-value }}
+      IMAGE_TAG: hotfix-${{ vars.PATCH_BRANCH }}-${{ vars.HOTFIX_TAG }}
       AGOL_URL: https://services6.arcgis.com/ubm4tcTYICKBpist/ArcGIS/rest/services
       DRIVEBC_BASE_URL: https://maps.th.gov.bc.ca/geoV05/ows
       OPENMAPS_BASE_URL: https://openmaps.gov.bc.ca/geo/pub/ows
