--- a/client/wfnews-war/src/main/angular/package.json
+++ b/client/wfnews-war/src/main/angular/package.json
@@ -74,7 +74,7 @@
     "ngx-moment": "3.1.0",
     "ngx-pagination": "5.1.1",
     "ngx-treeview": "6.0.2",
-    "node-sass": "7.0.3",
+    "sass": "^1.43.4",
     "popper.js": "1.14.4",
     "puppeteer": "15.4.0",
     "qrcode": "1.5.1",
