--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -55,15 +55,10 @@ jobs:
 
   android-build:
     uses: ./.github/workflows/android.yml
-    with:
-      PRODUCTION_RELEASE: false
-    secrets:
-      GOOGLE_PLAY_JSON_KEY: ${{ secrets.GOOGLE_PLAY_JSON_KEY }}
+    secrets: inherit
 
   ios-build:
     uses: ./.github/workflows/ios.yml
-    with:
-      PRODUCTION_RELEASE: false
     secrets: inherit
 
 
