Add branch temporarily for testing

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -11,6 +11,7 @@ on:
       - closed
     branches:
       - 'main'
+      - 'mobile-build-automation'
     paths:
       - ".github/workflows/**"
       - "client/**"
