--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -11,7 +11,6 @@ on:
       - closed
     branches:
       - 'main'
-      - 'mobile-build-automation'
     paths:
       - ".github/workflows/**"
       - "client/**"
@@ -22,6 +21,9 @@ on:
       - "Dockerfile"
       - "Dockerfile_client"
       - "!**/README.md"
+  push:
+    branches:
+      - 'mobile-build-automation'
 
 jobs:
 
