--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,7 +23,6 @@ jobs:
         with:
           java-version: '17'
           distribution: 'adopt'
-          cache: 'gradle'
       
       - name: Add .npmrc file
         run: echo -e $NPMRC > ~/.npmrc
@@ -33,6 +32,7 @@ jobs:
         with:
           node-version: 16
           cache: 'npm'
+          cache-dependency-path: ${{ env.ANGULAR_DIRECTORY }}/package-lock.json
 
       - name: Cache node modules
         id: cache-npm
