--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -6,6 +6,8 @@ on: workflow_call
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
+    env:
+      ANGULAR_DIRECTORY: ./client/wfnews-war/src/main/angular
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
@@ -18,6 +20,7 @@ jobs:
         with:
           node-version: 16
           cache: 'npm'
+          cache-dependency-path: ${{ env.ANGULAR_DIRECTORY }}/package-lock.json
 
       - name: Configure ruby
         uses: ruby/setup-ruby@v1
