--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,7 +25,7 @@ jobs:
           distribution: 'adopt'
       
       - name: Add .npmrc file
-        run: echo -e ${{ secrets.NPM_TOKEN }} > ~/.npmrc
+        run: echo -e ${{ secrets.NPM_TOKEN }} > ${{ env.ANGULAR_DIRECTORY }}/.npmrc
           
       - name: Setup Node.js
         uses: actions/setup-node@v3
