--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Add .npmrc file
-        run: echo -e ${{ secrets.NPM_TOKEN }} > ~/.npmrc
+        run: echo -e ${{ secrets.NPM_TOKEN }} > ${{ env.ANGULAR_DIRECTORY }}/.npmrc
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
