--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -32,26 +32,26 @@ jobs:
         with:
           node-version: 16
           cache: 'npm'
-          cache-dependency-path: ${{ env.ANGULAR_DIRECTORY }}/package-lock.json
+          # cache-dependency-path: ${{ env.ANGULAR_DIRECTORY }}/package-lock.json
 
-      - name: Cache node modules
-        id: cache-npm
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
+      # - name: Cache node modules
+      #   id: cache-npm
+      #   uses: actions/cache@v3
+      #   env:
+      #     cache-name: cache-node-modules
+      #   with:
+      #     # npm cache files are stored in `~/.npm` on Linux/macOS
+      #     path: ~/.npm
+      #     key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-build-${{ env.cache-name }}-
+      #       ${{ runner.os }}-build-
+      #       ${{ runner.os }}-
 
-      - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
-        name: List the state of node modules
-        continue-on-error: true
-        run: npm list
+      # - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
+      #   name: List the state of node modules
+      #   continue-on-error: true
+      #   run: npm list
 
       - name: Install Ionic
         run: npm install -g @ionic/cli
@@ -64,16 +64,16 @@ jobs:
         working-directory: ${{ env.ANGULAR_DIRECTORY }}
         run: ionic capacitor sync android --prod
 
-      ## cache to reduce future builds
-      - name: Cache Gradle
-        uses: actions/cache@v3
-        with:
-          path: | 
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('gradle/wrapper/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
+      # ## cache to reduce future builds
+      # - name: Cache Gradle
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: | 
+      #       ~/.gradle/caches
+      #       ~/.gradle/wrapper
+      #     key: ${{ runner.os }}-gradle-${{ hashFiles('gradle/wrapper/gradle-wrapper.properties') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-gradle-
 
       - name: Make gradlew executable
         working-directory: ./android
