--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
-          cache: 'npm'
+          # cache: 'npm'
           # cache-dependency-path: ${{ env.ANGULAR_DIRECTORY }}/package-lock.json
 
       - name: Configure ruby
