--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Add .npmrc file
         working-directory: ${{ env.ANGULAR_DIRECTORY }}
-        run: /bin/echo -e "$NPMRC" > .npmrc
+        run: echo "$NPMRC" > .npmrc
 
       - name: Show npmrc file
         working-directory: ${{ env.ANGULAR_DIRECTORY }}
