--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -13,7 +13,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Add .npmrc file
-        run: echo -n "$NPMRC" > .npmrc
+        working-directory: ${{ env.ANGULAR_DIRECTORY }}
+        run: |
+          echo -n "$NPMRC" > .npmrc
+          ls
+          cat .npmrc
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
